k8s/flask_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web
  # StrategyType: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: ecr-credentials-secret
      containers:
      - name: flask-app
        image: flask-app:v1
        # never pull the image policy
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
      # volumes:
      # - name: db-init
      #   configMap:
      #     name: initdb-config
