k8s/service_flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  selector:
    app: web
  ports:
  - name: web-service-port
    protocol: TCP
    port: 5000
    targetPort: 5000
    # nodePort: 32000
  type: ClusterIP
