k8s/service_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  labels:
    app: mysql-db
spec:
  selector:
    app: mysql-db
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
