k8s/ingress controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx-Flask
  rules:
  - host: "flask.test999.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app-svc
            port:
              number: 5000
