k8s/ingress_controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx-Flask
  ingressClassName: alb
  rules:
  - host: flask.test999.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app-svc
            port:
              number: 5000
